# pyepignostics

./: .gitignore  README.md  epignostics-proxy-server.py  install.sh  pymnp-proxy-server.py  pyproject.toml  setup.py  test.sh
doc/: API_REFERENCE.md
pyepignostics/: epignostics.py  workflows.py
pymnp/: __init__.py  pymnp.py  workflows.py
scripts/: download-results.sh  epignostics-proxy-server.sh  pymnp-proxy-server.sh
templates/: base.html  index.html
tests/: conftest.py  test_401_handling.py  test_login.py  test_workflows.py
